<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryLightColor"
    tools:context=".ui.login.LoginActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="267dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo"
                android:contentDescription="@string/logo" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_photo_profile"
                    android:layout_width="171dp"
                    android:layout_height="171dp"
                    android:contentDescription="@string/profile"
                    android:src="@drawable/photo_profile"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btn_add_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/button_photo"
                    android:src="@drawable/ic_baseline_photo_camera_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/iv_photo_profile" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="21dp"
                android:background="@drawable/rounded_frame_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_logo">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailedtlayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="32dp"
                        android:background="@color/white"
                        android:gravity="center"
                        app:boxBackgroundColor="@color/white"
                        app:layout_constraintTop_toBottomOf="@+id/emailedtlayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:fontFamily="@font/poppins"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordedtlayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="32dp"
                        android:background="@color/white"
                        android:gravity="center"
                        app:boxBackgroundColor="@color/white"
                        app:layout_constraintTop_toBottomOf="@+id/emailedtlayout"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/edt_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:fontFamily="@font/poppins"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:autofillHints="password" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordconfirmedtlayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="32dp"
                        android:background="@color/white"
                        android:gravity="center"
                        app:boxBackgroundColor="@color/white"
                        app:layout_constraintTop_toBottomOf="@+id/emailedtlayout"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/edt_password_confirm"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:fontFamily="@font/poppins"
                            android:hint="@string/confirm_password"
                            android:inputType="textPassword"
                            android:autofillHints="confirm password" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/nameeditLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="32dp"
                        android:background="@color/white"
                        android:gravity="center"
                        app:boxBackgroundColor="@color/white"
                        app:layout_constraintTop_toBottomOf="@+id/emailedtlayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/name" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/phone_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="32dp"
                        android:background="@color/white"
                        android:gravity="center"
                        app:boxBackgroundColor="@color/white"
                        app:layout_constraintTop_toBottomOf="@+id/emailedtlayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/phone" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="40dp"
                        android:text="@string/gender"
                        android:textSize="16sp" />

                    <RadioGroup
                        android:id="@+id/radio_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="40dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rb_male"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/male"
                            android:textSize="16sp" />

                        <RadioButton
                            android:id="@+id/rb_female"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/female"
                            android:textSize="16sp" />
                    </RadioGroup>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_register"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="279dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginEnd="38dp"
                        android:text="@string/register"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:cornerRadius="7dp" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_to_login"
                            style="@style/Widget.MaterialComponents.Button"
                            android:layout_width="match_parent"
                            android:layout_height="65dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/rounded_frame_layout"
                            android:text="@string/login"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            app:cornerRadius="30dp" />
                    </FrameLayout>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>