<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryLightColor"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="267dp"
        android:layout_height="266dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_b"
        android:contentDescription="@string/logo" />


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/rounded_frame_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailedtlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:background="@color/white"
                android:gravity="center"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/emailedtlayout"
                app:startIconDrawable="@drawable/ic_baseline_person_24">

                <EditText
                    android:id="@+id/edt_email_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordedtlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:background="@color/white"
                android:gravity="center"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/emailedtlayout"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_baseline_lock_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_password_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="279dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="38dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:cornerRadius="7dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_to_signup"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center|bottom"
                    android:layout_marginTop="40dp"
                    android:gravity="top|center"
                    android:paddingTop="15dp"
                    android:background="@drawable/rounded_frame_layout"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textStyle="bold"

                    app:cornerRadius="30dp" />
            </FrameLayout>
        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>