<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        tools:ignore="MenuTitle" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_sharp_favorite_24_black"
        tools:ignore="MenuTitle" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_person_24"
        tools:ignore="MenuTitle" />
</menu>